--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <h2 class="step-title">Informazioni Generali</h2>
             <p class="step-subtitle">Inserisci i dettagli della tua prenotazione</p>
           </div>
+          <div class="form-group">
+    <label class="form-label" for="data-checkin">Data check-in</label>
+    <input type="date" id="data-checkin" name="data-checkin" class="form-input" required>
+  </div>
 
           <div class="form-grid">
             <div class="form-group">
