--- a/Calendario.html
+++ b/Calendario.html
@@ -910,23 +910,26 @@ nextMonth() {
                 return conflicts;
             }
 
-            updateSyncButton(loading) {
-                const btn = document.getElementById('syncBtn');
-                const icon = btn.querySelector('i');
-                const text = btn.querySelector('span');
-                
-                if (loading) {
-                    icon.classList.add('animate-spin');
-                    text.textContent = 'Sincronizzando...';
-                    btn.disabled = true;
-                    btn.classList.add('opacity-50');
-                } else {
-                    icon.classList.remove('animate-spin');
-                    text.textContent = 'Sincronizza';
-                    btn.disabled = false;
-                    btn.classList.remove('opacity-50');
-                }
-            }
+           updateSyncButton(loading) {
+    const btn = document.getElementById('syncBtn');
+    if (!btn) return; // evita l'errore se il bottone non esiste
+
+    const icon = btn.querySelector('i');
+    const text = btn.querySelector('span');
+    
+    if (loading) {
+        if (icon) icon.classList.add('animate-spin');
+        if (text) text.textContent = 'Sincronizzando...';
+        btn.disabled = true;
+        btn.classList.add('opacity-50');
+    } else {
+        if (icon) icon.classList.remove('animate-spin');
+        if (text) text.textContent = 'Sincronizza';
+        btn.disabled = false;
+        btn.classList.remove('opacity-50');
+    }
+}
+
 
             updateSyncInfo() {
                 const syncInfo = document.getElementById('lastSyncInfo');
