--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="it">
 <!-- SOSTITUISCI LA SEZIONE HEAD COMPLETA CON QUESTA -->
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5, viewport-fit=cover">
   <meta name="theme-color" content="#c4a484">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Check-in Ospiti">
   <meta name="description" content="Completa la registrazione per il tuo soggiorno">
