--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <div class="form-group">
               <label class="form-label" for="numero-ospiti">Numero ospiti</label>
-              <select id="numero-ospiti" name="numero-ospiti" class="form-select" required onchange="toggleTipoGruppo()">
+              <select id="numero-ospiti" name="numero-ospiti" class="form-select" required>
                 <option value="">Seleziona numero</option>
                 <option value="1">1 ospite</option>
                 <option value="2">2 ospiti</option>
