Add pattern attribute to booking number input

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 class="form-input" 
                 placeholder="Es. BK12345"
                 autocomplete="off"
+                   pattern="[A-Za-z0-9]*"
                 style="text-transform: uppercase;">
             </div>
             <a href="#" class="no-booking-link" onclick="event.preventDefault(); saltaVerifica();">
