--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="checkin.css">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
   
   <!-- Fix per notch e area sicura su dispositivi moderni -->
   <style>
