--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
       margin-bottom: 20px;
     }
   </style>
+    <!-- 🚀 OTTIMIZZAZIONE: Precarica Domini Stripe -->
+<link rel="preconnect" href="https://js.stripe.com">
+<link rel="preconnect" href="https://checkout.stripe.com">
+<link rel="preconnect" href="https://m.stripe.com">
+<link rel="preconnect" href="https://m.stripe.network">
+<link rel="dns-prefetch" href="https://js.stripe.com">
+<link rel="dns-prefetch" href="https://checkout.stripe.com">
+
+<!-- 🎨 Precarica Font Stripe (opzionale ma aiuta) -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<!-- 📊 Precarica API Backend (il tuo Vercel) -->
+<link rel="preconnect" href="https://checkin-six-coral.vercel.app">
+<link rel="dns-prefetch" href="https://checkin-six-coral.vercel.app">
 </head>
 <body>
   <div class="container">
