--- a/successo-pagamento.html
+++ b/successo-pagamento.html
@@ -177,6 +177,64 @@
             transform: translateY(-2px);
             box-shadow: 0 6px 15px rgba(166, 124, 82, 0.3);
         }
+        /* ===== AGGIUNGI QUESTI STILI AL <style> tag ===== */
+
+/* Stili per codici multipli */
+.multi-codes {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    width: 100%;
+}
+
+.code-item {
+    background: rgba(255, 255, 255, 0.15);
+    padding: 20px;
+    border-radius: 12px;
+    text-align: center;
+}
+
+.code-label {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: #fff;
+    opacity: 0.95;
+}
+
+.code-number {
+    font-size: 2.2rem;
+    font-weight: bold;
+    letter-spacing: 0.15em;
+    margin: 15px 0;
+    background: rgba(255, 255, 255, 0.2);
+    padding: 15px;
+    border-radius: 8px;
+}
+
+.code-desc {
+    display: block;
+    font-size: 0.85rem;
+    opacity: 0.8;
+    margin-top: 8px;
+}
+
+/* Responsive per mobile */
+@media (max-width: 600px) {
+    .multi-codes {
+        grid-template-columns: 1fr;
+        gap: 15px;
+    }
+
+    .code-number {
+        font-size: 1.8rem;
+        padding: 12px;
+    }
+
+    .code-label {
+        font-size: 1rem;
+    }
+}
 
         @media (max-width: 600px) {
             .success-container {
