--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ select[multiple].form-select option:checked {
                 <select id="tipo-gruppo" name="tipo-gruppo" class="form-select">
                   <option value="">Seleziona tipo</option>
                   <option value="famiglia">Famiglia</option>
-                  <option value="generico">Generico</option>
+                  <option value="generico">Gruppo</option>
                 </select>
               </div>
             </div>
