--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 }
 
 .select-wrapper-mobile::after {
-  content: '👆 Tocca per selezionare';
+  content: 'Tocca per selezionare';
   position: absolute;
   bottom: 10px;
   left: 50%;
