--- a/index.html
+++ b/index.html
@@ -341,6 +341,6 @@ select[multiple].form-select option:checked {
   </div>
 
   <script src="checkin.js"></script>
-  <script src="checkin-optimized.js"></script>
+  <!--<script src="checkin-optimized.js"></script>-->
 </body>
 </html>
